deployment/base/address-validation-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: address-validation-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: address-validation.workshopcluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: address-validation-service
                port:
                  number: 8080
